hphp/hack/test/typecheck/async_function_untyped5.php.exp
File "async_function_untyped5.php", line 7, characters 7-8:
Class C2 does not correctly implement all required methods  (Typing[4110])
File "async_function_untyped5.php", line 7, characters 18-19:
Some methods are incompatible with those declared in type C1
Read the following to see why:
File "async_function_untyped5.php", line 8, characters 19-19:
Member f has the wrong type
File "async_function_untyped5.php", line 4, characters 25-25:
This is an object of type Awaitable (result of 'async function')
File "async_function_untyped5.php", line 8, characters 24-26:
It is incompatible with an int
